result/subtask05-casting/testcase02.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
> Insert `a` (addr: 1) to scope level 1
/mnt/c/Users/ncc/Desktop/2024-Spring-NCKU-CompilerHW2/input/subtask05-casting/testcase02.cpp:3:11: error:  syntax error
     3 |    int a = 0, b = 0;
       |          ^
Total lines: 3
